--- a/TCC/src/visao/Cadastro/Administrativo/CadastroGrupoProduto.form
+++ b/TCC/src/visao/Cadastro/Administrativo/CadastroGrupoProduto.form
@@ -183,10 +183,13 @@
                         <Property name="text" type="java.lang.String" value="Descri&#xe7;&#xe3;o:"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JCheckBox" name="jCheckBox1">
+                    <Component class="javax.swing.JCheckBox" name="jchSugereValor">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Sugere valor padr&#xe3;o"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jchSugereValorActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -195,24 +198,24 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jTextField1" min="-2" pref="513" max="-2" attributes="0"/>
-                          <Component id="jTextField2" alignment="0" min="-2" pref="95" max="-2" attributes="0"/>
+                          <Component id="jtfGrupoDescricao" min="-2" pref="513" max="-2" attributes="0"/>
+                          <Component id="jtfGrupoValor" alignment="0" min="-2" pref="95" max="-2" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jtfGrupoDescricao" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="15" pref="15" max="-2" attributes="0"/>
-                              <Component id="jTextField2" min="-2" pref="20" max="-2" attributes="0"/>
+                              <Component id="jtfGrupoValor" min="-2" pref="20" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
                   </Layout>
                   <SubComponents>
-                    <Component class="javax.swing.JTextField" name="jTextField1">
+                    <Component class="javax.swing.JTextField" name="jtfGrupoDescricao">
                     </Component>
-                    <Component class="javax.swing.JTextField" name="jTextField2">
+                    <Component class="javax.swing.JTextField" name="jtfGrupoValor">
                       <Properties>
                         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[6, 15]"/>
